--- a/TPMetodosAgiles/src/main/java/Reporte/licencia.jrxml
+++ b/TPMetodosAgiles/src/main/java/Reporte/licencia.jrxml
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" printOrder="Horizontal" pageWidth="750" pageHeight="397" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="750" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="eae730d9-34a4-47b6-a69c-742f3d17a346">
-	<property name="ireport.zoom" value="1.0"/>
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" language="groovy" printOrder="Horizontal" pageWidth="343" pageHeight="200" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="343" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" uuid="eae730d9-34a4-47b6-a69c-742f3d17a346">
+	<property name="ireport.zoom" value="2.1435888100000016"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<subDataset name="dataset1" uuid="c32c1766-6c1f-4273-9120-f44834ac80d2"/>
+	<parameter name="nro_id" class="java.lang.Integer"/>
+	<parameter name="apellido" class="java.lang.String"/>
+	<parameter name="nombre" class="java.lang.String"/>
+	<parameter name="domicilio" class="java.lang.String"/>
+	<parameter name="fecha_venc" class="java.lang.Date"/>
+	<parameter name="fecha_nacimiento" class="java.lang.Date"/>
+	<parameter name="grupo_sanguineo" class="java.lang.String"/>
+	<parameter name="factor" class="java.lang.String"/>
+	<parameter name="clase" class="java.lang.String"/>
+	<parameter name="donante" class="java.lang.Boolean"/>
+	<parameter name="observaciones" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT * FROM persona, licencia, vigencias WHERE 1]]>
 	</queryString>
@@ -16,140 +27,155 @@
 	<field name="factor" class="java.lang.String"/>
 	<field name="donante" class="java.lang.Boolean"/>
 	<field name="fecha_emision" class="java.sql.Date"/>
+	<field name="fecha_venc" class="java.sql.Date"/>
 	<field name="duracion" class="java.lang.Integer"/>
+	<field name="clase_id" class="java.lang.String"/>
 	<field name="observaciones" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="397" splitType="Stretch">
+		<band height="200" splitType="Stretch">
 			<image>
-				<reportElement uuid="da8d66e5-6f28-465d-9322-b7eee1ff1f38" x="0" y="319" width="752" height="78"/>
+				<reportElement uuid="da8d66e5-6f28-465d-9322-b7eee1ff1f38" x="1" y="165" width="342" height="35"/>
 				<imageExpression><![CDATA["D:\\Datos\\Documentos\\Reporte\\bordeAbajo.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="6a135534-2026-4162-bcfc-d3e27f0b734c" x="0" y="0" width="752" height="85"/>
+				<reportElement uuid="6a135534-2026-4162-bcfc-d3e27f0b734c" x="0" y="0" width="343" height="39"/>
 				<imageExpression><![CDATA["D:\\Datos\\Documentos\\Reporte\\bordeArriba.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement uuid="e2ab3c92-6ec1-4dc2-83a3-8cb0350f96df" x="14" y="98" width="108" height="104"/>
+				<reportElement uuid="e2ab3c92-6ec1-4dc2-83a3-8cb0350f96df" x="10" y="39" width="93" height="80"/>
 				<imageExpression><![CDATA["D:\\Datos\\Documentos\\Reporte\\young-boy-head-with-long-hair.png"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="284" y="98" width="69" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="129" y="39" width="69" height="16"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[N° Licencia:]]></text>
 			</staticText>
-			<textField pattern="###0">
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="284" y="124" width="156" height="20"/>
-				<textElement>
-					<font size="14" isBold="true"/>
-				</textElement>
-			</textField>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="284" y="156" width="69" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="129" y="71" width="69" height="16"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Apellido:]]></text>
 			</staticText>
-			<textField>
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="284" y="182" width="156" height="20"/>
-				<textElement>
-					<font size="14" isBold="true"/>
-				</textElement>
-			</textField>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="284" y="216" width="69" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="129" y="103" width="69" height="16"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Nombre:]]></text>
 			</staticText>
-			<textField>
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="284" y="242" width="156" height="20"/>
-				<textElement>
-					<font size="14" isBold="true"/>
-				</textElement>
-			</textField>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="284" y="272" width="69" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="129" y="134" width="69" height="14"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Domicilio:]]></text>
 			</staticText>
-			<textField>
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="284" y="298" width="156" height="20"/>
-				<textElement>
-					<font size="14" isBold="true"/>
-				</textElement>
-			</textField>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="534" y="98" width="69" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="246" y="39" width="37" height="16"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Clase/s:]]></text>
 			</staticText>
-			<textField>
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="534" y="124" width="156" height="20"/>
-				<textElement>
-					<font size="14" isBold="true"/>
-				</textElement>
-			</textField>
-			<textField>
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="534" y="182" width="156" height="20"/>
-				<textElement>
-					<font size="14" isBold="true"/>
-				</textElement>
-			</textField>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="534" y="156" width="143" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="246" y="70" width="93" height="16"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Grupo sanguíneo y factor:]]></text>
 			</staticText>
-			<textField>
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="534" y="298" width="156" height="20"/>
-				<textElement>
-					<font size="14" isBold="true"/>
-				</textElement>
-			</textField>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="534" y="272" width="69" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="302" y="39" width="37" height="16"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Donante:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="14" y="216" width="93" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="10" y="119" width="93" height="16"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Observaciones:]]></text>
 			</staticText>
 			<textField>
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="14" y="242" width="184" height="76"/>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="10" y="136" width="108" height="29"/>
 				<textElement>
-					<font size="14" isBold="true"/>
+					<font size="9" isBold="true"/>
 				</textElement>
 			</textField>
 			<staticText>
-				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="534" y="216" width="143" height="16"/>
-				<textElement>
-					<font size="12" isItalic="true"/>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="246" y="102" width="93" height="16"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
 				</textElement>
 				<text><![CDATA[Fecha de nacimiento:]]></text>
 			</staticText>
+			<staticText>
+				<reportElement uuid="8f61dd52-3fa4-40d6-a308-f255685d63b6" x="246" y="133" width="56" height="15"/>
+				<textElement verticalAlignment="Middle">
+					<font size="8" isItalic="true"/>
+				</textElement>
+				<text><![CDATA[Válida hasta:]]></text>
+			</staticText>
 			<textField>
-				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="534" y="242" width="156" height="20"/>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="246" y="87" width="93" height="15"/>
 				<textElement>
-					<font size="14" isBold="true"/>
+					<font size="9" isBold="true"/>
+				</textElement>
+			</textField>
+			<textField>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="246" y="118" width="93" height="15"/>
+				<textElement>
+					<font size="9" isBold="true"/>
+				</textElement>
+			</textField>
+			<textField>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="302" y="54" width="37" height="15"/>
+				<textElement>
+					<font size="9" isBold="true"/>
+				</textElement>
+			</textField>
+			<textField>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="246" y="55" width="37" height="15"/>
+				<textElement>
+					<font size="9" isBold="true"/>
+				</textElement>
+			</textField>
+			<textField>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="129" y="88" width="86" height="15"/>
+				<textElement>
+					<font size="9" isBold="true"/>
+				</textElement>
+			</textField>
+			<textField>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="129" y="148" width="86" height="15"/>
+				<textElement>
+					<font size="9" isBold="true"/>
+				</textElement>
+			</textField>
+			<textField pattern="###0">
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="129" y="55" width="86" height="15"/>
+				<textElement>
+					<font size="9" isBold="true"/>
+				</textElement>
+			</textField>
+			<textField>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="129" y="119" width="86" height="15"/>
+				<textElement>
+					<font size="9" isBold="true"/>
+				</textElement>
+			</textField>
+			<textField>
+				<reportElement uuid="3e101f6c-a4ea-4690-93b1-f87576a8dab5" x="246" y="148" width="93" height="15"/>
+				<textElement verticalAlignment="Middle">
+					<font size="9" isBold="true"/>
 				</textElement>
 			</textField>
 		</band>
